// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders with "connected" styling 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
  gap: 33px;
}

.emotion-0 h2,
.emotion-0 h3,
.emotion-0 h4 {
  margin-top: 4px;
}

.emotion-0:not(:last-child):after {
  content: '';
  border-left: 2px dashed #E8EDEB;
  bottom: 0;
  left: 16px;
  position: absolute;
  top: 0;
  z-index: -1;
}

.emotion-2 {
  position: relative;
}

.emotion-4 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 50%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-weight: bold;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  background-color: #E3FCF7;
  color: #00684A;
  height: 34px;
  width: 34px;
}

.emotion-6 {
  padding-bottom: 64px;
}

@media only screen and (max-width: 767px) {
  .emotion-6 {
    padding-bottom: 40px;
  }
}

@media only screen and (max-width: 480px) {
  .emotion-6 {
    padding-bottom: 32px;
  }
}

.emotion-7 {
  margin-bottom: 16px;
}

.emotion-9 {
  margin: unset;
  font-family: Akzidenz,'Helvetica Neue',Helvetica,Arial,sans-serif;
  color: #21313C;
  font-size: 14px;
  line-height: 20px;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  font-weight: 400;
}

.emotion-13 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  position: relative;
  -webkit-text-decoration: none!important;
  text-decoration: none!important;
  line-height: 13px;
  outline: none;
  color: #016BF8;
}

.emotion-13:focus {
  outline: none;
}

.emotion-13>code {
  color: #016BF8;
}

.emotion-13::after {
  content: '';
  position: absolute;
  width: 100%;
  height: 2px;
  bottom: -4px;
  left: 0;
  border-radius: 2px;
}

.emotion-13:focus .emotion-13::after {
  background-color: #0498EC;
}

.emotion-13:hover::after {
  background-color: #E8EDEB;
}

<div
    class="emotion-0 emotion-1"
  >
    <div
      class="emotion-2 emotion-3"
    >
      <div
        class="emotion-4 emotion-5"
      >
        1
      </div>
    </div>
    <div
      class="emotion-6"
    >
      <div
        class="emotion-7 emotion-8 emotion-9"
      >
        Import data from CSV or JSON files into your MongoDB database.
      </div>
      <div
        class="emotion-7 emotion-8 emotion-9"
      >
        <a
          class="emotion-13 emotion-14"
          href="/import-export/#std-label-compass-import-export"
        >
          To learn more, see Import and Export Data
        </a>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`renders with "connected" styling by default 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
  gap: 33px;
}

.emotion-0 h2,
.emotion-0 h3,
.emotion-0 h4 {
  margin-top: 4px;
}

.emotion-0:not(:last-child):after {
  content: '';
  border-left: 2px dashed #E8EDEB;
  bottom: 0;
  left: 16px;
  position: absolute;
  top: 0;
  z-index: -1;
}

.emotion-2 {
  position: relative;
}

.emotion-4 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 50%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-weight: bold;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  background-color: #E3FCF7;
  color: #00684A;
  height: 34px;
  width: 34px;
}

.emotion-6 {
  padding-bottom: 64px;
}

@media only screen and (max-width: 767px) {
  .emotion-6 {
    padding-bottom: 40px;
  }
}

@media only screen and (max-width: 480px) {
  .emotion-6 {
    padding-bottom: 32px;
  }
}

.emotion-7 {
  margin-bottom: 16px;
}

.emotion-9 {
  margin: unset;
  font-family: Akzidenz,'Helvetica Neue',Helvetica,Arial,sans-serif;
  color: #21313C;
  font-size: 14px;
  line-height: 20px;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  font-weight: 400;
}

.emotion-13 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  position: relative;
  -webkit-text-decoration: none!important;
  text-decoration: none!important;
  line-height: 13px;
  outline: none;
  color: #016BF8;
}

.emotion-13:focus {
  outline: none;
}

.emotion-13>code {
  color: #016BF8;
}

.emotion-13::after {
  content: '';
  position: absolute;
  width: 100%;
  height: 2px;
  bottom: -4px;
  left: 0;
  border-radius: 2px;
}

.emotion-13:focus .emotion-13::after {
  background-color: #0498EC;
}

.emotion-13:hover::after {
  background-color: #E8EDEB;
}

<div
    class="emotion-0 emotion-1"
  >
    <div
      class="emotion-2 emotion-3"
    >
      <div
        class="emotion-4 emotion-5"
      >
        1
      </div>
    </div>
    <div
      class="emotion-6"
    >
      <div
        class="emotion-7 emotion-8 emotion-9"
      >
        Import data from CSV or JSON files into your MongoDB database.
      </div>
      <div
        class="emotion-7 emotion-8 emotion-9"
      >
        <a
          class="emotion-13 emotion-14"
          href="/import-export/#std-label-compass-import-export"
        >
          To learn more, see Import and Export Data
        </a>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`renders with "normal" or YAML steps styling 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 16px;
}

.emotion-0 h2,
.emotion-0 h3,
.emotion-0 h4 {
  margin-top: 4px;
}

.emotion-2 {
  position: relative;
}

.emotion-4 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 50%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-weight: bold;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  background-color: #333;
  color: #FFFFFF;
  height: 24px;
  width: 24px;
}

.emotion-7 {
  margin-bottom: 16px;
}

.emotion-9 {
  margin: unset;
  font-family: Akzidenz,'Helvetica Neue',Helvetica,Arial,sans-serif;
  color: #21313C;
  font-size: 14px;
  line-height: 20px;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  font-weight: 400;
}

.emotion-13 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  position: relative;
  -webkit-text-decoration: none!important;
  text-decoration: none!important;
  line-height: 13px;
  outline: none;
  color: #016BF8;
}

.emotion-13:focus {
  outline: none;
}

.emotion-13>code {
  color: #016BF8;
}

.emotion-13::after {
  content: '';
  position: absolute;
  width: 100%;
  height: 2px;
  bottom: -4px;
  left: 0;
  border-radius: 2px;
}

.emotion-13:focus .emotion-13::after {
  background-color: #0498EC;
}

.emotion-13:hover::after {
  background-color: #E8EDEB;
}

<div
    class="emotion-0 emotion-1"
  >
    <div
      class="emotion-2 emotion-3"
    >
      <div
        class="emotion-4 emotion-5"
      >
        1
      </div>
    </div>
    <div
      class="emotion-6"
    >
      <div
        class="emotion-7 emotion-8 emotion-9"
      >
        Import data from CSV or JSON files into your MongoDB database.
      </div>
      <div
        class="emotion-7 emotion-8 emotion-9"
      >
        <a
          class="emotion-13 emotion-14"
          href="/import-export/#std-label-compass-import-export"
        >
          To learn more, see Import and Export Data
        </a>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
